--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,16 @@ set(PROJECT_VESRION 0.0.${PATCH_VERSION})
 
 project(helloworld VERSION ${PROJECT_VESRION})
 
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG        v1.13.0
+)
+FetchContent_MakeAvailable(googletest)
+add_library(GTest::GTest INTERFACE IMPORTED)
+target_link_libraries(GTest::GTest INTERFACE gtest_main gmock_main)
+
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
@@ -12,8 +22,9 @@ configure_file(version.h.in version.h)
 add_executable(helloworld_cli main.cpp)
 add_library(helloworld lib.cpp)
 add_executable(test_version test_version.cpp)
+add_executable(test_version_google test_version_google.cpp)
 
-set_target_properties(helloworld_cli helloworld test_version PROPERTIES
+set_target_properties(helloworld_cli helloworld test_version test_version_google PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
@@ -32,6 +43,16 @@ target_link_libraries(test_version
     ${Boost_LIBRARIES}
     helloworld
 )
+target_link_libraries(test_version
+        helloworld
+        gtest
+        gtest_main
+)
+target_link_libraries(test_version_google
+        helloworld
+        gtest
+        gtest_main
+)
 
 if (MSVC)
     target_compile_options(helloworld_cli PRIVATE
@@ -43,6 +64,9 @@ if (MSVC)
     target_compile_options(test_version PRIVATE
         /W4
     )
+    target_compile_options(test_version_google PRIVATE
+            /W4
+    )
 else ()
     target_compile_options(helloworld_cli PRIVATE
         -Wall -Wextra -pedantic -Werror
@@ -52,6 +76,9 @@ else ()
     )
     target_compile_options(test_version PRIVATE
         -Wall -Wextra -pedantic -Werror
+    )
+    target_compile_options(test_version_google PRIVATE
+            -Wall -Wextra -pedantic -Werror
     )
 endif()
 
@@ -72,3 +99,5 @@ include(CPack)
 enable_testing()
 
 add_test(test_version test_version)
+
+add_test(test_version_google test_version_google)
